<resources>
    <string name="app_name">SampleLogin_Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_your_password">Don\'t Remember your Password?</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account_sign_up">Don\'t you have an account ? Sign Up</string>
    <string name="or">or</string>
    <string name="or_login_with">or Login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="select_an_username">Select an username</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_an_account_login">Do you have an account ? Login</string>
    <string name="error_msg_et_email">Email isn\'t invalid.</string>
    <string name="error_msg_et_password">Password Field is Empty.</string>
    <string name="error_msg_et_username">Username is Empty.</string>
</resources>
