<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registration"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/normal_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/background_et"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/background_et"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/background_btn"
                android:text="@string/login_now"
                android:textAllCaps="false"
                android:textColor="@color/btn_color" />

            <Button
                android:id="@+id/btn_forget_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/don_t_remember_your_password"
                android:textAllCaps="false"
                android:textColor="@color/btn_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mini_margin"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/white_transparent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/or_login_with"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_color" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/white_transparent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/google" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/facebook" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_transparent" />

        <Button
            android:id="@+id/btn_go_to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/don_t_you_have_an_account_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/btn_color" />

    </LinearLayout>
</FrameLayout>